# a301_students_eoas

./: .buildinfo  .gitignore  LICENSE  README.md  _config.yml  _toc.yml  docker-compose-website.yml  environment.yml  genindex.html  index.html  objects.inv  requirements.txt  rsync.sh  searchindex.js
.doctrees/: environment.pickle
.doctrees/notebooks/: assignments.doctree  index.doctree  notebooks.doctree
_sources/notebooks/: index.md  notebooks.ipynb
a301_lib/: __init__.py  setup.py
a301_lib/a301_lib/: __init__.py
a301_libraries/a301_lib/: print_version.py  pyproject.toml
a301_libraries/a301_lib/recipe/: meta.yaml
a301_libraries/a301_lib/src/a301_lib/: __init__.py
a301_libraries/rad_lib/: planck_invert.py  pyproject.toml  write_version.py
a301_libraries/rad_lib/src/rad_lib/: __init__.py  radiation.py
a301_libraries/sat_lib/: print_version.py  pyproject.toml  setup.cfg  write_version.py
a301_libraries/sat_lib/landsat/: toa_reflectance_old.py
a301_libraries/sat_lib/landsat/core/: __init__.py  list_files.py  rename.py
a301_libraries/sat_lib/src/: __init__.py  cloudsat.py  dump_h5.py  geometry.py  h4_inspect.py  landsat_wrs.py  modismeta_read.py  process_bands.py  process_geom.py  thermo.py
a301_libraries/sat_lib/src/hdftools/: docker-compose.yml  h5dump.py
a301_libraries/sat_lib/src/landsat/: landsat_metadata.py
a301_libraries/sat_lib/src/landsat/core/: enf_filelist.py
a301_libraries/sat_lib/src/sat_lib/: __init__.py  cloudsat.py  false_color.py  hdf4_inspect.py  landsat_read.py  mapping.py  modis_chans.py  modischan_read.py  modismeta_read.py  readcloudsat_hdf.md  set_nasa_password.py  thermo.py
a301_libraries/sat_lib/src/sat_lib/landsat/: landsat_metadata.py  solar.py  toa_radiance.py  toa_reflectance.py
a301_libraries/sat_lib/src/sat_lib/utils/: false_color.py  marshall_palmer.py  plotting.py  read_hdf.py
a301_libraries/sat_lib/src/utils/: data_read.py  marshall_palmer.py
html/: search.html  searchindex.js
html/notebooks/: assignments.html
notebooks/: assignments.md  index.html  index.md  notebooks.html  notebooks.md  refs.txt
notebooks/assignments/: assign1_handin.ipynb  assign1_handin_solution.html  assign1_solution.md  assign2a_solution.html  assign2a_solution.md  assign2b_solution.md  assign5_handin.md  assign6_handin.md  assign6_solution.md  assignment2a_handin.ipynb  assignment2b_handin.ipynb  assignment3a.md  assignment3a_solution.md  assignment3b.md  assignment3b_handin.ipynb  assignment3b_handin.md  assignment3b_solution.md  assignment4.md  assignment4_solution.md  assignment5_solution.md  assignment6_radar_equation_solution.md  assignment6_solution.md
notebooks/corrine/: read_corrine.py
notebooks/final/: final_2022_equations.tex
notebooks/midterm/: a3012_mid_2022t23_solutions.md  a301_equations.md  a301_equations.rst  a301_mid_2022t2_solutions.md  mid_2023_students.md  mid_term_reviewI.rst  mid_term_reviewII.rst  mid_term_reviewII_solutions.rst  mid_term_reviewI_solutions.rst
notebooks/week1/: a301_syllabus.md  e582_syllabus.md  e582_syllabus.rst  getting_started.md  integrity.html  modis_level1b_read.md  modis_level1b_read.py  satellite.html  syllabus.rst  texts.rst  week1_topics.html  week1_topics.md
notebooks/week10/: assign15b_diffuse_flux.md  assign15b_diffuse_flux.py  assign5b_multilayer_sol.md  assign5b_multilayer_sol.py  assign6a_diffuse_flux.md  assign6a_diffuse_flux.py  assign6a_diffuse_flux_sol.md  assign6a_diffuse_sol.md  demo_cartopy_extent.md  demo_cartopy_extent.py  false_color.html  false_color.md  image_zoom.md  image_zoom.py  ndvi_rasterio.md  ndvi_rasterio.py  rainrate.md  scene_image.md  scene_image.py  temperature_perturb.html  temperature_perturb.md  vancouver.geojson  vancouver_345_stretched.png.aux.xml  week10_topics.md  week10_topics.py  write_geotiffs.md
notebooks/week11/: Readme_gshhs_wdbII.md  a301_final_part1.md  assign6b_sol.md  assign6b_sol.py  cloudsat_flxhr.md  false_examples.md  false_function.md  features_demo.md  features_demo.py  final_guide.rst  flux_from_radiance_rev.rst  flux_schwartzchild.rst  flux_schwartzchild_mathy.rst  goes_true_color.md  heating_rate.py  heating_rate.rst  hires_map.md  hires_map.py  marshall_palmer.rst  ndvi_fiona.md  radar.rst  subset_map.md  week11_topics.md
notebooks/week12/: assign7a.md  assign7b.md  evolve_prof.md  final_guide.html  final_guide.md  goes_michael.md  heating_rate_evolution.md  heating_rate_profile.md  level2_cartopy_writetiff.md  nearir_wv.tiff  stull_radar.md  stull_radar.py  stull_radar_app.md  water_vapor_stretched.png.aux.xml  week12_topics.md
notebooks/week13/: a301_final.md  a301_final.py  (+5 more)
(+357 files in other folders)
