[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'

[project]
name = "a301_lib"
description = "a301 utility functions"
version = "0.0.1"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
[project.urls]
"Homepage" = "https://github.com/phaustin/a301_students_eoas"
