[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'

[project]
name = "a301_lib"
description = "a301 utility functions"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/phaustin/a301_students_eoas"

[tool.setuptools_scm]
write_to = "a301_libraries/a301_lib/src/a301_lib/_version.py"
root = "../.."
