[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'

[project]
name = "rad_lib"
description = "a301 radiation code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
version = "0.1"
dependencies = [
    "pyhdf",
    "click"
]
[project.scripts]
read_modis_meta = "sat_lib.modismeta_read:main"



