[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'

[project]
name = "rad_lib"
description = "a301 radiation code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]   
dependencies = [
    "pyhdf",
    "click"
]
[tool.setuptools_scm]
write_to = "a301_libraries/rad_lib/src/rad_lib/_version.py"
root = "../.."

