[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
    "setuptools_scm[toml] >= 4, <6"
]
build-backend = 'setuptools.build_meta'

[project]
name = "sat_lib"
description = "a301 satellite code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]   

[project.scripts]
meta_read = "sat_lib.modismeta_read:main"
hdf4_inspect = "sat_lib.hdf4_inspect:main"

[tool.setuptools_scm]
write_to = "src/sat_lib/VERSION_satlib.txt"




