[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'


[project]
name = "sat_lib"
description = "a301 satellite code"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dynamic = ["version"]   

[project.scripts]
meta_read = "sat_lib.modismeta_read:main"
hdf4_inspect = "sat_lib.hdf4_inspect:main"
set_nasa_password = "sat_lib.set_nasa_password:main"
plot_marshall = "sat_lib.utils.marshall_palmer:plot_marshall"
read_hdf = "sat_lib.utils.read_hdf:read_hdf"
[tool.setuptools_scm]
write_to = "a301_libraries/sat_lib/src/sat_lib/_version.py"
root = "../.."








































