[metadata]
name = gradelib
author = OCESE
author_email = phaustin@eoas.ub.ca
description = "grading software"
url = https://github.com/phaustin/e211_lib
project_urls =
    Bug Tracker = https://github.com/phaustin/gradelib/issues
keywords='eoas ubc ocese',
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
python_requires = >=3.9
setup_requires =
    setuptools_scm
package_dir =
   = src

[options.packages.find]
where = src

[bdist_wheel]
universal = 1


